--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = py36, py37,py38
+envlist = py36, py37, py38, py39, py310
 isolated_build = True
 
 [testenv]
 whitelist_externals = poetry
-deps = pytest
 commands =
-    poetry install -v
+    poetry install -v --no-dev
+    poetry run pip install pytest~=7.0 pytest-cov~=3.0
     poetry run pytest {posargs}
