--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.6.2"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 bandit = "^1.7"
 black = "^22.1"
 dlint = "^0.12"
@@ -42,10 +42,11 @@ flake8-isort = "^4.1"
 isort = "^5.10"
 mypy = "^0.931"
 pdoc = {version = "^10.0", python = ">=3.7,<4.0"}
+pep8-naming = "^0.13"
 pip-licenses = "^3.5"
 poethepoet = "^0.12"
 pytest = "^7.0"
-pytest-cov = "^3.0"
+pytest-cov = "^4.0"
 safety = "^1.10"
 tox = "^3.14"
 
